--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 value="Programming"
               />
               <label class="form-check-label" for="programming">
-                Computer Programming
+                Programming
               </label>
             </div>
             <div class="form-check">
